--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_profile.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_profile.scss
@@ -1,42 +1,27 @@
 /* Profile - View Topic, PM, Memberlist View
-   Note: More specific styling like layout sizing is located in their specific sections
 ============================================== */
 
 .postprofile {
-	border-right: 1px dashed $color-01;
-	dt, .profile-rank, .profile-permissions {
-		text-align: center;
+	dt, dd {
+		margin: 0 0 5px 0;
 	}
-	dt {
-		& > strong {
-			font-weight: normal;
-		}
-		text-align: center;
-		margin: 0 0 10px 0;
+ 	dt {
 		a, span {
 			&[class*='username'] {
-				display: block;
 				@include spectral-common;
-				font-size: rem(22px);
+				font-size: rem(24px);
 			}
 		}
-		.avatar-container > .avatar {
-			margin: 0 0 10px 0;
-		}
 	}
-	dd {
-		margin: 0 0 3px 0;
+	.profile-rank, .profile-character-details {
+		margin: 0 0 20px 0;
+		& > div:first-child ~ div {
+			margin-top: 5px;
+		}
 	}
 	.profile-rank {
 		font-family: $font-02;
 		font-style: italic;
-		margin: 10px 0;
-		div ~ div {
-			margin: 5px 0 0 0;
-		}
-	}
-	.profile-permissions {
-		font-size: rem(12px);
 	}
 }
 
@@ -46,11 +31,15 @@
 .level {
 	.level-wrap {
 		display: inline-block;
+		.level-name, .level-value {
+			line-height: 1;
+		}
 		.level-name {
 			font-size: rem(18px);
 		}
 		.level-value {
-			font-size: rem(50px);
+			font-size: rem(48px);
+			margin: 2.5px 0 -10px 0;
 		}
 	}
 	&.level-small .level-wrap {
@@ -58,7 +47,7 @@
 			font-size: rem(14px);
 		}
 		.level-value {
-			font-size: rem(38px);
+			font-size: rem(40px);
 		}
 	}
 }
@@ -221,69 +210,5 @@
 	}
 	&:after {
 		top: 39px;
-	}
-}
-
-/* Memberlist - View Profile
-============================================== */
-
-#viewprofile {
-	.tab-panel {
-		&.show-panel {
-			@include toggle-content(show, $transition: true);
-		}
-		&.hide-panel {
-			@include toggle-content(hide);
-			@include position($type: absolute, $top: -9999px, $left: -9999px, $z: -1);
-		}
-	}
-	.profile-panel {
-		position: relative;
-		.inner {
-			@include flex-flow(row nowrap);
-			.postprofile {
-				flex: 0 0 231px;
-				margin: 0 20px 20px 0;
-				padding: 0 20px 0 0;
-			}
-			.profile-details {
-				@include flex(base);
-				.group-options select {
-					width: auto;
-					margin-bottom: 0;
-					min-width: 50%;
-				}
-				.zebra a i {
-					color: $color-00;
-					font-size: rem(16px);
-					margin: 0 5px 0 0;
-					@include position($type: relative, $top: 1px);
-				}
-			}
-		}
-	}
-	.user-contact .contact-icons {
-		a {
-			color: $color-00;
-			&:hover {
-				color: $color-03;
-			}
-			.contact-icon:before {
-				font-size: rem(20px);
-			}
-		}
-	}
-	.user-stats dl.details dd {
-		br {
-			display: none;
-		}
-		strong a {
-			display: inline-block;
-			margin: 0 10px 0 0;
-		}
-	}
-	.panel .signature {
-		margin-top: 20px;
-		padding-top: 20px;
 	}
 }
