--- a/khyeras/styles/khyeras_v1/template/viewtopic_body.html
+++ b/khyeras/styles/khyeras_v1/template/viewtopic_body.html
@@ -156,7 +156,7 @@
 			</dt>
 
 			<!-- EVENT viewtopic_body_postrow_rank_before -->
-			<!-- IF postrow.RANK_TITLE or postrow.RANK_IMG or postrow.S_PROFILE_TITLE -->
+			<!-- IF postrow.RANK_TITLE or postrow.RANK_IMG or postrow.PROFILE_TITLE_VALUE -->
 				<dd class="profile-rank">
 					<!-- IF postrow.RANK_TITLE or postrow.RANK_IMG -->
 						<div class="rank-label">{postrow.RANK_TITLE}</div>
@@ -164,7 +164,7 @@
 							<div class="rank-image">{postrow.RANK_IMG}</div>
 						<!-- ENDIF -->
 					<!-- ENDIF -->
-					<!-- IF postrow.S_PROFILE_TITLE -->
+					<!-- IF postrow.PROFILE_TITLE_VALUE -->
 						<div class="title-label">{postrow.PROFILE_TITLE_VALUE}</div>
 					<!-- ENDIF -->
 				</dd>
