--- a/khyeras/_dev/styles/khyeras_v1/template/memberlist_view.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/memberlist_view.html
@@ -7,8 +7,36 @@
 	{% set writer_class = 'writer-panel tab-panel hide-panel' %}
 {% endif %}
 
-{% set nothing_here %}
-	<p>There's nothing here yet...</p>
+{% set member_name %}
+	{% EVENT memberlist_view_username_prepend %}
+	{% if USER_COLOR %}<span  class="username-coloured" style="color: {{ USER_COLOR }};">{% else %}<span>{% endif %}{{ USERNAME }}</span>
+	{% EVENT memberlist_view_username_append %}
+{% endset %}
+
+{% set member_rank_title %}
+	{% if AVATAR_IMG %}
+		{% EVENT memberlist_view_rank_avatar_before %}
+	{% else %}
+		{% EVENT memberlist_view_rank_no_avatar_before %}
+	{% endif %}
+	{% if RANK_TITLE || RANK_IMG || PROFILE_TITLE_VALUE %}
+		<dd class="profile-rank">
+			{% if RANK_TITLE || RANK_IMG %}
+				<div class="rank-label">{{ RANK_TITLE }}</div>
+				{% if RANK_IMG %}
+					<div class="rank-image">{{ RANK_IMG }}</div>
+				{% endif %}
+			{% endif %}
+			{% if PROFILE_TITLE_VALUE %}
+				<div class="title-label">{{ PROFILE_TITLE_VALUE }}</div>
+			{% endif %}
+		</dd>
+	{% endif %}
+	{% if AVATAR_IMG %}
+		{% EVENT memberlist_view_rank_avatar_after %}
+	{% else %}
+		{% EVENT memberlist_view_rank_no_avatar_after %}
+	{% endif %}
 {% endset %}
 
 <h2 class="memberlist-title">{PAGE_TITLE}</h2>
@@ -30,9 +58,9 @@
 	<div class="panel bg1<!-- IF S_ONLINE --> online<!-- ENDIF --> profile-panel">
 		<div class="inner">
 			<div class="flex-row flex-row-10">
-				<div class="flex-column profile-avatar<!-- IF PROFILE_ALT_AVATAR_VALUE --> has-alt-avatar<!-- ENDIF -->">
+				<div class="flex-column flex-column-left<!-- IF PROFILE_ALT_AVATAR_VALUE --> has-alt-avatar<!-- ENDIF -->">
 					<dl class="postprofile">
-						<dt class="has-avatar">
+						<dt class="has-avatar <!-- IF RANK_TITLE or RANK_IMG -->has-profile-rank<!-- ELSE -->no-profile-rank<!-- ENDIF -->">
 							<!-- IF PROFILE_ALT_AVATAR_VALUE -->
 								<div class="alt-avatar-container">
 									<div class="alt-avatar">
@@ -49,53 +77,18 @@
 									<!-- ENDIF -->
 								</div>
 							</div>
+							{{ member_name }}
 						</dt>
+						{{ member_rank_title }}
 					</dl>
 				</div>
-				<div class="flex-column profile-details">
-					<dl class="postprofile">
+
+				<div class="flex-column flex-column-right">
+					<dl class="detailsprofile">
 						<dt class="<!-- IF RANK_TITLE or RANK_IMG -->has-profile-rank<!-- ELSE -->no-profile-rank<!-- ENDIF -->">
-							<!-- EVENT memberlist_view_username_prepend -->
-							<!-- IF USER_COLOR --><span  class="username-coloured" style="color: {USER_COLOR};"><!-- ELSE --><span><!-- ENDIF -->{USERNAME}</span>
-							{% if PROFILE_PRONUNCIATION_VALUE %}<em class="pronunciation">({{ PROFILE_PRONUNCIATION_VALUE }})</em>{% endif %}
-							<!-- EVENT memberlist_view_username_append -->
+							{{ member_name }}
 						</dt>
-
-						<!-- IF AVATAR_IMG -->
-							<!-- EVENT memberlist_view_rank_avatar_before -->
-						<!-- ELSE -->
-							<!-- EVENT memberlist_view_rank_no_avatar_before -->
-						<!-- ENDIF -->
-
-						<!-- IF RANK_TITLE or RANK_IMG or PROFILE_TITLE_VALUE -->
-							<dd class="profile-rank">
-								<!-- IF RANK_TITLE or RANK_IMG -->
-									<div class="rank-label">{RANK_TITLE}</div>
-									<!-- IF RANK_IMG -->
-										<div class="rank-image">{RANK_IMG}</div>
-									<!-- ENDIF -->
-								<!-- ENDIF -->
-								<!-- IF PROFILE_TITLE_VALUE -->
-									<div class="title-label">{PROFILE_TITLE_VALUE}</div>
-								<!-- ENDIF -->
-							</dd>
-						<!-- ENDIF -->
-
-						<!-- IF AVATAR_IMG -->
-							<!-- EVENT memberlist_view_rank_avatar_after -->
-						<!-- ELSE -->
-							<!-- EVENT memberlist_view_rank_no_avatar_after -->
-						<!-- ENDIF -->
-
-						<!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
-							<dd class="profile-character-details {{ character_class }}">
-								<div class="character-card">
-									{{ function.display_level(KHY_MEMBER_LEVEL, 'false') }}
-									{{ function.display_stats(KHY_MEMBER_STATS.hp, KHY_MEMBER_STATS.mp, PROFILE_C_HP_VALUE, PROFILE_C_MP_VALUE, 'false') }}
-								</div>
-								{{ function.display_currency(KHY_MEMBER_CURRENCY) }}
-							</dd>
-						<!-- ENDIF -->
+						{{ member_rank_title }}
 					</dl>
 
 					<!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
@@ -105,6 +98,7 @@
 					<!-- INCLUDE partials/memberlist_writer_details.html -->
 				</div>
 			</div>
+
 			<!-- IF PROFILE_ACCOUNT_TYPE_VALUE == 'Character' -->
 				<!-- INCLUDE partials/memberlist_character_desc.html -->
 			<!-- ENDIF -->
