--- a/khyeras/_dev/styles/khyeras_v1/template/partials/memberlist_character_details.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/memberlist_character_details.html
@@ -1,15 +1,20 @@
-<dl class="details {{ character_class }}">
+<dl class="detailsprofile details {{ character_class }}">
 	{% set character_fields = {
 		'Experience'                 : (PROFILE_C_EXPERIENCE_VALUE ? PROFILE_C_EXPERIENCE_VALUE : '&#48;'),
 		(PROFILE_C_RACE_OPTS_NAME)   : PROFILE_C_RACE_OPTS_VALUE | replace({', ': ' and '}),
 		(PROFILE_C_CLASS_OPTS_NAME)  : PROFILE_C_CLASS_OPTS_VALUE | replace({', ': ' and '}),
 		(PROFILE_C_PROFESSION_NAME)  : PROFILE_C_PROFESSION_VALUE,
-		(PROFILE_C_BIRTHDAY_NAME)    : PROFILE_C_BIRTHDAY_VALUE,
-		(PROFILE_C_AGE_NAME)         : PROFILE_C_AGE_VALUE,
 		(PROFILE_C_GENDER_NAME)      : PROFILE_C_GENDER_VALUE,
-		(PROFILE_C_ORIGIN_NAME)      : PROFILE_C_ORIGIN_VALUE,
-		(PROFILE_C_RESIDENCE_NAME)   : PROFILE_C_RESIDENCE_VALUE
+		(PROFILE_PRONUNCIATION_NAME) : PROFILE_PRONUNCIATION_VALUE
 	} %}
+
+	<dd class="profile-character-details">
+		<div class="character-card">
+			{{ function.display_level(KHY_MEMBER_LEVEL, 'false') }}
+			{{ function.display_stats(KHY_MEMBER_STATS.hp, KHY_MEMBER_STATS.mp, PROFILE_C_HP_VALUE, PROFILE_C_MP_VALUE, 'false') }}
+		</div>
+		{{ function.display_currency(KHY_MEMBER_CURRENCY) }}
+	</dd>
 
 	{% if character_fields %}
 		{% for name, value in character_fields %}
