--- a/khyeras/_dev/styles/khyeras_v1/template/partials/memberlist_writer_details.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/memberlist_writer_details.html
@@ -1,4 +1,4 @@
-<dl class="detailsprofile details {{ writer_class }}">
+<dl class="details {{ writer_class }}">
 	{% if S_USER_INACTIVE %}
 		<dt>{{ lang('USER_IS_INACTIVE') }}{{ lang('COLON') }}</dt>
 		<dd>{{ USER_INACTIVE_REASON }}</dd>
