--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/imports/_other-sections.scss
@@ -143,46 +143,49 @@ dl.faq {
 	}
 	.profile-panel {
 		position: relative;
-		.has-alt-avatar .postprofile dt.has-avatar .avatar-container, .postprofile dt.has-avatar a, .postprofile dt.has-avatar span , .postprofile .profile-rank {
-			display: none;
-		}
 		.flex-row {
 			.flex-column-left {
 				flex: 0 0 300px;
+				&.has-alt-avatar {
+					flex: 0 0 400px;
+				}
+				.postprofile dt {
+					margin: 0;
+				}
 			}
 			.flex-column-right {
 				@include flex(base);
+				.postprofile .avatar-container {
+					display: none;
+				}
 			}
-			.flex-column-left.has-alt-avatar {
-				flex: 0 0 400px;
+			.details {
+				.group-options select {
+					width: auto;
+					margin-bottom: 0;
+					min-width: 75%;
+				}
+				.zebra a i {
+					color: $color-00;
+					font-size: rem(16px);
+					margin: 0 5px 0 0;
+					@include position($type: relative, $top: 1px);
+				}
 			}
 		}
 		.postprofile {
-			dt.has-avatar {
-				.alt-avatar-container .alt-avatar {
+			dt.has-avatar .alt-avatar-container {
+				margin: 0 0 20px 0;
+				& > .alt-avatar {
 					line-height: 0;
 					border: 5px solid $color-01;
-					margin: 0 0 20px 0;
 					img {
 						max-height: 600px;
 					}
 				}
 			}
-		}
-		.detailsprofile {
 			.stats .stat-bar {
 				max-width: 75%;
-			}
-			.group-options select {
-				width: auto;
-				margin-bottom: 0;
-				min-width: 75%;
-			}
-			.zebra a i {
-				color: $color-00;
-				font-size: rem(16px);
-				margin: 0 5px 0 0;
-				@include position($type: relative, $top: 1px);
 			}
 		}
 	}
@@ -346,7 +349,7 @@ dl.faq {
 
 .banner {
 	margin: 0 0 20px 0;
-	border: 2px solid $color-01;
+	border: 5px solid $color-01;
 	position: relative;
 	&.banner-aligned {
 		border: 0;
@@ -354,7 +357,7 @@ dl.faq {
 		margin: -20px -20px 20px -20px;
 	}
 	&.banner-vertical {
-		padding-bottom: calc(150% - 4px);
+		padding-bottom: calc(150% - 10px);
 		overflow: hidden;
 		img {
 			@include position($type: absolute, $top: 0, $bottom: 0, $left: -50%, $right: -50%);
