--- a/khyeras/styles/khyeras_v1/template/partials/memberlist_character_details.html
+++ b/khyeras/styles/khyeras_v1/template/partials/memberlist_character_details.html
@@ -1,4 +1,4 @@
-<dl class="detailsprofile details {{ character_class }}">
+<dl class="details {{ character_class }}">
 	{% set character_fields = {
 		'Experience'                 : (PROFILE_C_EXPERIENCE_VALUE ? PROFILE_C_EXPERIENCE_VALUE : '&#48;'),
 		(PROFILE_C_RACE_OPTS_NAME)   : PROFILE_C_RACE_OPTS_VALUE | replace({', ': ' and '}),
@@ -7,14 +7,6 @@
 		(PROFILE_C_GENDER_NAME)      : PROFILE_C_GENDER_VALUE,
 		(PROFILE_PRONUNCIATION_NAME) : PROFILE_PRONUNCIATION_VALUE
 	} %}
-
-	<dd class="profile-character-details">
-		<div class="character-card">
-			{{ function.display_level(KHY_MEMBER_LEVEL, 'false') }}
-			{{ function.display_stats(KHY_MEMBER_STATS.hp, KHY_MEMBER_STATS.mp, PROFILE_C_HP_VALUE, PROFILE_C_MP_VALUE, 'false') }}
-		</div>
-		{{ function.display_currency(KHY_MEMBER_CURRENCY) }}
-	</dd>
 
 	{% if character_fields %}
 		{% for name, value in character_fields %}
